fixed whitespace gap in homepage

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -83,13 +83,17 @@ animation-name: bounceIn;
 }
 /*end of Jumbotron icon style*/
 
+.jumbotron {
+  margin-bottom: 0 !important;
+}
+
 .navbar-brand {
   padding: 2px 5px!important;
-  background-color: #9d9d9d  
+  background-color: #9d9d9d
 }
 .navbar-inverse .navbar-header .navbar-brand:hover {
   padding: 2px 5px!important;
-  background-color: #9d9d9d  
+  background-color: #9d9d9d
 }
 
 html, body {
